--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "init-db": "sequelize db:create && sequelize db:migrate && sequelize db:seed:all",
     "lint": "eslint .",
     "lint-fix": "eslint ./src --fix",
+    "migrate": "sequelize db:migrate",
     "production": "pm2 start src/app.js --interpreter babel-node --name api-data",
     "start": "nodemon src/app.js --exec babel-node --presets env",
     "test": "echo \"Error: no test specified\" && exit 1"
