--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "migrate": "sequelize db:migrate",
     "production": "pm2 start src/app.js --interpreter babel-node --name api-data",
     "start": "nodemon src/app.js --exec babel-node --presets env",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test && mocha __tests__/**/*.js"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
