--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
     "pm2": "^3.5.1",
-    "sequelize": "^5.9.2"
+    "sequelize": "^5.9.2",
+    "swagger-jsdoc": "^3.3.0",
+    "swagger-ui-express": "^4.0.7"
   },
   "devDependencies": {
     "eslint": "5.3.0",
