--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "swagger-ui-express": "^4.0.7"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "eslint": "5.3.0",
     "eslint-config-airbnb-base": "13.2.0",
     "eslint-plugin-import": "^2.17.2",
+    "mocha": "^6.1.4",
     "nodemon": "^1.19.1",
     "sequelize-cli": "^5.5.0"
   }
