--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pg-hstore": "^2.3.3",
     "pm2": "^3.5.1",
     "sequelize": "^5.9.2",
+    "sequelize-cli": "^5.5.0",
     "swagger-jsdoc": "^3.3.0",
     "swagger-ui-express": "^4.0.7"
   },
@@ -36,7 +37,6 @@
     "eslint-config-airbnb-base": "13.2.0",
     "eslint-plugin-import": "^2.17.2",
     "mocha": "^6.1.4",
-    "nodemon": "^1.19.1",
-    "sequelize-cli": "^5.5.0"
+    "nodemon": "^1.19.1"
   }
 }
