--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   database:
     image: postgres:11.4-alpine
+    container_name: production-control_database
     restart: unless-stopped
     environment:
       - POSTGRES_USER=postgres
@@ -12,11 +13,31 @@ services:
     volumes:
       - datavolume:/var/lib/postgresql/data
     networks:
-      - production-control-db-network
+      - production-control-network
+  
+  api:
+    build: .
+    container_name: production-control_api
+    restart: unless-stopped
+    depends_on:
+      - database
+    environment:
+      - APP_HOST=0.0.0.0
+      - APP_PORT=5000
+      - DB_DIALECT=postgres
+      - DB_HOST=database
+      - DB_NAME=production_control
+      - DB_PASSWORD=Abc_1234
+      - DB_PORT=5432
+      - DB_USERNAME=postgres
+      - NODE_ENV=development
+    ports:
+      - "5000:5000"
+    networks:
+      - production-control-network
 
 networks: 
-  production-control-db-network:
-    driver: bridge
+  production-control-network:
 
 volumes:
   datavolume:
